# couch-vision

./: .gitignore  .pre-commit-config.yaml  .swiftformat  .swiftlint.yml  AGENTS.md  CLAUDE.md  Makefile  README.md  SELF_DRIVING_STACK.md  SENSOR_STREAMER_SPEC.md  TODO.md  cyclonedds.xml  hold_test.py  hold_test_erpm.py  project.yml  verify_bag.py  vesc_mcconf_24v.xml  vesc_mcconf_48v.xml
.claude/skills/docker-colima/: SKILL.md
.claude/skills/jetson-deploy/: SKILL.md
.claude/skills/perception/: SKILL.md
.claude/skills/ros2-macos/: SKILL.md
.claude/skills/rtabmap-slam/: SKILL.md
.github/workflows/: ci.yml
CouchVision.xcodeproj/: project.pbxproj
CouchVision.xcodeproj/project.xcworkspace/xcuserdata/charlie.xcuserdatad/: UserInterfaceState.xcuserstate
CouchVision.xcodeproj/xcuserdata/charlie.xcuserdatad/xcschemes/: xcschememanagement.plist
CouchVision/App/: ContentView.swift  CouchVisionApp.swift  SettingsView.swift
CouchVision/Core/: LiveActivityManager.swift  Logger.swift  SettingsStorage.swift  TimeUtils.swift
CouchVision/Core/Coordinator/: SensorCoordinator.swift
CouchVision/Core/Protocols/: Publisher.swift  SensorProvider.swift
CouchVision/Networking/: MockPublisher.swift  ZenohPublisher.swift
CouchVision/ROS/: CDREncoder.swift
CouchVision/ROS/Messages/: DeviceMessages.swift  EnvironmentMessages.swift  Header.swift  ImageMessages.swift  ImuMessages.swift  LocationMessages.swift  OdometryMessages.swift  PointCloudMessages.swift  TransformMessages.swift
CouchVision/Resources/: Info.plist
CouchVision/Sensors/: CameraManager.swift  DeviceStatusManager.swift  EnvironmentManager.swift  LiDARManager.swift  LocationManager.swift  MotionManager.swift
CouchVisionWidgets/: CouchVisionWidgetsBundle.swift  Info.plist  StreamingActivityAttributes.swift  StreamingLiveActivity.swift
bridge/: Dockerfile  docker-compose.yml  ios_bridge.py  pyproject.toml
ekf/: Dockerfile  docker-compose.yml  grid_search.py  inspect_mcap.py  pyproject.toml  ukf_grid_search.py
ekf/src/couch_ekf/: bag_reader.py  dashboard.py  ekf.py  geo.py  result.py  runner.py  ukf.py
ekf/tests/: test_cdr.py  test_ekf.py  test_geo.py
foxglove/: couch_layout.json
foxglove/gamepad-relay-panel/: .npmrc  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
foxglove/gamepad-relay-panel/src/: GamepadRelayPanel.tsx  index.ts
foxglove/hardware-safety-panel/: CHANGELOG.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
foxglove/hardware-safety-panel/src/: HardwareSafetyPanel.tsx  index.ts
foxglove/nav-control-panel/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
foxglove/nav-control-panel/src/: NavControlPanel.tsx  index.ts
infra/: main.tf
infra/lambda/: index_generator.py
lane/: analyze_video.py  pyproject.toml
nav/: basic_nav_node.py  pyproject.toml
perception/: Dockerfile  Dockerfile.costmap  Dockerfile.cuvslam  Dockerfile.nav2  Dockerfile.rtabmap  docker-compose.costmap.yml  docker-compose.nav2.yml  docker-compose.vesc.yml  docker-compose.yml  entrypoint_ble.sh  entrypoint_nav2.sh  entrypoint_vesc.sh  pyproject.toml
perception/config/: cuvslam_params.yaml  nav2_planner_params.yaml  nvblox_params.yaml  phone_mount.urdf  rtabmap_params.yaml
perception/configs/: accurate.yaml  default.yaml  fast.yaml
perception/launch/: nav2_planner.launch.py
perception/scripts/: benchmark.py  diagnose_projection.py  export_tensorrt.py  tune_phone_mount.py
perception/src/couch_perception/: bag_reader.py  bev_projection_runner.py  ble_bridge.py  camera_model.py  cdr.py  config.py  costmap.py  costmap_runner.py  costmap_visualizer.py  differential_drive.py  ekf.py  frame_model.py  frame_source.py  gpu_utils.py  nav2_planner.py  nav2_planner_runner.py  odom_tf_broadcaster.py  path_follower.py  perception_pipeline.py  projection.py  ros_node.py  runner.py  vesc_driver.py  visualization.py  yolop_detector.py  yolov8_detector.py
perception/tests/: conftest.py  test_benchmark.py  test_costmap_fov.py  test_differential_drive.py
rviz/: couchvision.rviz
scripts/: bag_analysis.py  benchmark_slam.sh  ble_relay.py  env.sh  gamepad_relay.py  keep-foxglove-alive.sh  setup-ros2.sh  setup.sh  teleop_mac.sh  vesc_hold_test.py  vesc_rpm_test.py  vesc_wasd_rpm_control.py
sim/: README.md  pyproject.toml
sim/config/scenarios/: bumpy_washboard.yaml  cross_slope.yaml  flat_default.yaml  intersecting_grades.yaml  split_friction.yaml  uphill_downhill.yaml
sim/config/vehicle/: default.yaml
sim/src/couch_sim/: __init__.py  app.py  check.py  config.py  control.py  logging.py  model.py  plot_run.py
sim/tests/: test_config.py  test_control.py  test_input_mapping.py  test_model.py  test_motion.py
tools/couch-bluetooth/: .gitignore  README.md  config.example.toml  couch-range  flake.nix  pyproject.toml
tools/couch-bluetooth/docs/: couch-vision-integration.md  couchvision-walk.md  subagent-prompts.md
tools/couch-bluetooth/scripts/: orin-ping-walk-002.sh
tools/couch-bluetooth/src/couch_range/: __init__.py  analysis.py  bluetooth.py  cli.py  config.py  controller.py  couchvision.py  devices.py  distance.py  output.py  plotting.py  protocol.py  report.py  runner.py  simulation.py  telemetry.py  theme.py
tools/couch-bluetooth/tests/: test_analysis.py  test_couchvision.py  test_distance.py  test_output.py  test_schema.py  test_theme.py
urdf/: iphone_sensor.urdf
