[project]
name = "couch-vision-bridge"
version = "0.1.0"
description = "ROS2 bridge for CouchVision iOS app"
requires-python = ">=3.10"
# ROS2 packages (rclpy, sensor_msgs, etc.) come from the ROS2 install
# Add any extra pip dependencies here if needed
dependencies = []

[project.scripts]
ios-bridge = "ios_bridge:main"
