[project]
name = "couch-vision-bridge"
version = "0.1.0"
description = "ROS2 bridge for CouchVision iOS app"
requires-python = ">=3.10"
# ROS2 packages (rclpy, sensor_msgs, etc.) come from the ROS2 install
# Add any extra pip dependencies here if needed
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
ios-bridge = "ios_bridge:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E702",   # multiple statements on one line (common pattern for CDR parsing)
    "B008",   # function calls in default args (common in ROS2)
]

[tool.ruff.lint.isort]
known-first-party = ["ios_bridge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
