[project]
name = "couch-vision-bridge"
version = "0.1.0"
description = "ROS2 bridge for CouchVision iOS app"
requires-python = ">=3.12,<3.13"
# ROS2 packages (rclpy, sensor_msgs, geometry_msgs) come from the ROS2 system install.
# This project uses --system-site-packages to access them.
# Only add pure-Python pip dependencies here if needed.
dependencies = [
    "numpy>=2.4.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
ios-bridge = "ios_bridge:main"

[tool.uv]
# Reminder: venv must be created with `uv venv --system-site-packages`
# to access ROS2 Python packages from the system installation.

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "ANN",    # flake8-annotations (type hints)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ANN401", # Dynamically typed expressions (Any)
]

[tool.ruff.lint.isort]
known-first-party = ["ios_bridge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
# ROS2 packages don't have type stubs
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.14",
    "ruff>=0.9",
]
