[project]
name = "lane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.3.5",
    "mcap>=1.3.1",
    "mcap-ros2-support>=0.5.7",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "prefetch-generator>=1.0.3",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "transformers>=5.0.0",
    "yacs>=0.1.8",
    "yt-dlp>=2026.1.29",
]
