[project]
name = "couch-perception"
version = "0.1.0"
description = "Offline and real-time perception for CouchVision (YOLOv8 + YOLOP)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.10",
    "torch>=2.0",
    "torchvision>=0.15",
    "ultralytics>=8.0",
    "mcap>=1.1",
    "mcap-ros2-support>=0.5",
    "matplotlib>=3.8",
    "yacs>=0.1.8",
    "prefetch-generator>=1.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.60",
]

[project.scripts]
couch-perception = "couch_perception.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/couch_perception"]
