[project]
name = "couch-perception"
version = "0.1.0"
description = "Offline and real-time perception for CouchVision (YOLOv8 + YOLOP)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2; sys_platform == 'linux'",
    "numpy>=1.24; sys_platform != 'linux'",
    "opencv-python-headless>=4.10",
    "torch>=2.0; sys_platform != 'linux'",
    "torch>=2.0,<=2.8.0; sys_platform == 'linux'",
    "torchvision>=0.15; sys_platform != 'linux'",
    "torchvision>=0.15,<=0.23.0; sys_platform == 'linux'",
    "ultralytics>=8.0",
    "mcap>=1.1",
    "mcap-ros2-support>=0.5",
    "matplotlib>=3.8",
    "yacs>=0.1.8",
    "prefetch-generator>=1.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.60",
    "onnx>=1.14",
    "onnxslim>=0.1",

    "googlemaps>=4.10",
    "polyline>=2.0",
    "pyproj>=3.6",
    "requests>=2.28",
    "pyserial>=3.5",
]

[project.scripts]
couch-nav2-planner = "couch_perception.nav2_planner:main"
vesc-driver = "couch_perception.vesc_driver:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "psutil>=5.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cuda: requires CUDA GPU",
    "tensorrt: requires TensorRT engine",
    "slow: long-running benchmarks",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/couch_perception"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'x86_64')" },
    { index = "jetson-cuda", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'x86_64')" },
    { index = "jetson-cuda", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# Jetson Orin Nano (JetPack 6, CUDA 12.6). Other Jetson models need different indices.
[[tool.uv.index]]
name = "jetson-cuda"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126"
explicit = true
