[project]
name = "couch-sim"
version = "0.1.0"
description = "Standalone MuJoCo tuning sandbox for CouchVision teleop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "mcap-ros2-support>=0.5",
    "mcap>=1.1",
    "mujoco>=3.2.0",
    "numpy>=1.26",
    "pygame>=2.6.0",
    "pyyaml>=6.0",
]

[project.scripts]
couch-sim = "couch_sim.app:main"
couch-sim-check = "couch_sim.check:main"
couch-sim-plot = "couch_sim.plot_run:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/couch_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
