[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "couch-range"
version = "0.1.0"
description = "Bluetooth couch-control range field-test kit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "matplotlib",
]

[project.scripts]
couch-range = "couch_range.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
